# cyber-weryfikator

./: .gitignore  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  notatka.md  ruff.toml
.github/workflows/: test.yml
bank/: Dockerfile  bank.html  connector.py  main.py  pyproject.toml  qr-component.js  secret.txt
mObywatel/: Dockerfile  connector.py  main.py  pyproject.toml  test_main.py
mobile-app/: App.tsx  README.md  android-network-security-config.xml  app.json  package-lock.json  package.json  pnpm-lock.yaml
weryfikator/: Dockerfile  crypto.py  main.py  pyproject.toml  reproduce_ssl_error.py
weryfikator/checks/: __init__.py  base.py  ca_chain.py  domain.py  http_errors.py  key_exchange_errors.py  ssl_errors.py  unified.py
weryfikator/checks/data/: gov_pl_cert.txt  lista_gov_pl_z_www.txt
weryfikator/tests/: test_ca_chain.py  test_domain.py  test_http_errors.py  test_key_exchange_errors.py  test_main.py  test_ssl_errors.py  test_unified.py
