[project]
name = "bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.124.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

