[project]
name = "mObywatel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.124.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]

