[project]
name = "cyber-weryfikator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.124.0",
    "pydantic-settings>=2.0.0",
    "pyopenssl>=25.3.0",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]

